fix: fix font scaling problem on mobiles

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -3,6 +3,7 @@ $rfs-breakpoint-unit: 'em'; // media queries use 'em' unit
 $rfs-breakpoint: 1440px; // above this breakpoint, the value will be static
 $rfs-base-value: 10px;
 $rfs-factor: 2;
+$rfs-two-dimensional: true; // use vmin (improved appearance on landscape view)
 
 $colors: (
   "deep-black": #000000,
